[package]
edition = "2021"
version = "0.1.1"
name = "gear_friend_contract"
readme = "./README.md"
license = "MIT OR Apache-2.0"


[dependencies]
kee_bee_io = { path = "kee_bee_io" }
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"], tag = "v1.0.0" }
gtest = { git = "https://github.com/gear-tech/gear.git", tag = "v1.0.0" }
getrandom={version="0.2.10",features = ["js"]}

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", tag = "v1.0.0" }
kee_bee_io = { path = "kee_bee_io" }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git", tag = "v1.0.0" }
