[package]
name = "demo-meta-state-v1"
version = "0.1.0"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"], tag = "v1.0.1" }
gmeta = { git = "https://github.com/gear-tech/gear", tag = "v1.0.1" }
kee_bee_io = { path = "../kee_bee_io" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", tag = "v1.0.1" }

[features]
default = ["nostd"]
nostd = []