[package]
name = "demo-meta-state-v1"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
gstd.workspace = true
gmeta = { workspace = true, features = ["codegen"] }
kee-bee-io = { path = "../kee-bee-io"}

[build-dependencies]
gear-wasm-builder.workspace = true
